--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,15 @@ html, body {
   font-family: sans-serif;
   font-size: 1.0rem;
 }
+/* ================================
+   SP対応 (画面幅768px以下)
+================================ */
+@media screen and (max-width: 768px) {
+  html, body {
+    font-size: 1.0rem;
+  }
+}
+
 svg {
   width: 100vw;
   height: 100vh;
